--- a/index.html
+++ b/index.html
@@ -1,14 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./style.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Jiang Min</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+
 </head>
+
 <body>
-    helllo
+    <!-- NAV SECTION -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">JIANGMINSG</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#header-section">HOME</a></li>
+                    <li><a href="#about-section">ABOUT</a></li>
+                    <li><a href="#products-section">MY-WORK</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+    <!--END NAV SECTION -->
+    <!-- HEADER SECTION -->
+    <div id="header-section">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1><strong> JIANGMIN</strong>
+                    </h1>
+                    <br /> <br /> <br />
+                    <h2> 前端开发工程师</h2>
+                    <br />
+                    <a href="#about-section"> <i class="fa fa-angle-double-down fa-5x down-icon"></i> </a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <!--END HEADER SECTION -->
+    <!--ABOUT SECTION -->
+    <div id="about-section">
+        <div class="container">
+            <div class="row main-top-margin text-center">
+                <div class="col-md-8 col-md-offset-2 " data-scrollreveal="enter top and move 100px, wait 0.3s">
+                    <h1>Who Am I ?</h1>
+                    <h4>
+                        一个不被现实打到的男人 只要还能站起来 就能绝地翻盘<br>
+                        我们不应该活成别人所定义的模样 这一次我们要做自己
+                    </h4>
+                </div>
+            </div>
+            <!-- ./ Main Heading-->
+            <div class="row main-low-margin text-center">
+                <div class="col-md-3 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                    <img class="img-circle" src="assets/img/team/team1.jpg">
+                    <h4><strong>江敏</strong> </h4>
+                    <p>
+                        毕业于桂林理工大学<br>
+                        工作经验：2年<br>
+                        21岁
+
+                    </p>
+
+
+                </div>
+
+                <div class="col-md-7 col-sm-7 col-md-offset-1  text-justify"
+                    data-scrollreveal="enter right and move 100px, wait 0.4s">
+                    <h3> 项目经验</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+
+                    </p>
+                </div>
+            </div>
+            <!-- ./ Row Content-->
+        </div>
+    </div>
+    <!-- END ABOUT SECTION -->
+
+
+    <!--WORK/PRODUCTS SECTION -->
+    <div id="products-section">
+        <div class="container">
+            <div class="row main-top-margin text-center" data-scrollreveal="enter top and move 100px, wait 0.3s">
+                <div class="col-md-8 col-md-offset-2 ">
+                    <h1>我的生活</h1>
+                    <h4>
+                        男人嘛 无非就是抽烟喝酒烫头
+                    </h4>
+                </div>
+            </div>
+            <!-- ./ Main Heading-->
+            <hr />
+            <div class="row main-low-margin">
+                <div class="col-md-10  col-md-offset-1 ">
+                    <div class="col-md-4 col-sm-4" data-scrollreveal="enter left and move 100px, wait 0.8s">
+                        <video width="210" height="380" poster="./assets/img/product/fm.jpg" loop="loop" controls>
+                            <source src="./assets/img/product/ball.mp4" type="video/mp4">
+                            您的浏览器不支持 HTML5 video 标签。
+                        </video>
+                    </div>
+                    <div class="col-md-8 " data-scrollreveal="enter right and move 100px, wait 0.4s">
+                        <h4> <strong class="color-red"> 篮球 </strong></h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        </p>
+                        <p>
+                            <i class="fa fa-check"></i> 身高181<br />
+                            <i class="fa fa-check"></i> 体重68kg <br />
+                            <i class="fa fa-check"></i> 小前锋 <br />
+                        </p>
+                        <a href="#" class="btn btn-success">Come Back HOME</a>
+                    </div>
+                </div>
+
+            </div>
+            <!-- ./ Row Content-->
+            <hr />
+            <div class="row main-low-margin bottam-pad">
+
+                <div class="col-md-10  col-md-offset-1 ">
+                    <div class="col-md-8 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                        <h4> <strong class="color-red"> 联系方式 </strong></h4>
+                        <p>
+                            Email:2378366355@qq.com
+                        </p>
+                        <p>
+                            QQ:2378366355
+                        </p>
+                        <p>
+                            PhoneNumber:182******123
+                        </p>
+                        <p>
+                            <i class="fa fa-check"></i> 个人认证<br />
+                            <i class="fa fa-check"></i> 华为认证<br />
+                            <i class="fa fa-check"></i> 阿里认证<br />
+                        </p>
+                        <a href="#" class="btn btn-danger"> Come Back HOME</a>
+                    </div>
+                    <div class="col-md-4 " data-scrollreveal="enter right and move 100px, wait 0.4s">
+                        <img src="./assets/img/product/prd1.png">
+                    </div>
+                </div>
+            </div>
+            <!-- ./ Row Content-->
+        </div>
+    </div>
+
+    <!-- ./ Main Heading -->
+    </div>
+    </div> -->
+    <!--END CONTACT SECTION -->
+    <!--FOOTER SECTION -->
+    <div id="footer">
+        <div class="container">
+            <div class="row ">
+                &copy; 2022@ https://jmin646.github.io | All Right Reserved
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="assets/js/jquery.js"></script>
+
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <script src="assets/js/scrollReveal.js"></script>
+
+    <script src="assets/js/custom.js"></script>
 </body>
+
 </html>
